--- a/index.html
+++ b/index.html
@@ -1,39 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dream Vacation-alaska</title>
+        <title>RRedsAbout</title>
     </head>
-    <body style="background-color: #1476f7;">
-        <h1 style="background-color:#1b5d75; color:#14e1f7; text-align:center;">Vacation in alaska</h1>
-        <p style="background-color:PowderBlue; text-align:center;">I chose Alaska for the Dream vacation because I have already been there multiple times and I <b><i>loved</b></i> it. It's a great place to visit and a fun place to bring family, like renting cabins in mountains/camping and other stuff.if you have 1-3 weeks of off days this would be a great place to visit, you should go here in june to august because its the best time and good weather to visit.</p>
-    <img width=150px height=150px src="https://afar.brightspotcdn.com/dims4/default/40bdfb1/2147483647/strip/false/crop/4032x2016+0+0/resize/1486x743!/quality/90/?url=https%3A%2F%2Fk3-prod-afar-media.s3.us-west-2.amazonaws.com%2Fbrightspot%2Fa5%2F76%2F7d733fb1419fb4fff5fec8d7aa0a%2Falaska-guide-lede-supriya-kalidas.jpg"> 
-    <img width=150px height=150px src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtt7k8XD9c-njLJYjlfs0Sl-DNrV7Z7ecMfK7JI9kWCmwY2vSgfn1dffWeN4uiRkr65Hc&usqp=CAU"><br>
-    <img width=150px height=150px src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJQSgruAYCxz5Eq4ULESkBfNX6COP1UOnk1rLym5IOsfMc_G9amvxmGPOmG_aBbuSc-Pk&usqp=CAU">
-    <img width=150px height=150px src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRo6gtkG2VehqPImadxVFkly2yBRH37yKxkevPyI8HWiQJL42KuCgkV4e3nB0OXj_yoeIc&usqp=CAU"><hr  style="border-color:rgb(135, 206, 250);> 
-    <h2>Things to do in alaska</h2>
-    <list>
-        <ul>
-            <li style="background-color:#1427f7;">go exploreing</li>
-            <li style="background-color:PowderBlue;">hike the mountains</li>
-            <li style="background-color:#1427f7;">go fishing</li>
-            <li style="background-color:PowderBlue;">go climb glaciers</li>
-        </ul>
-    </list>
-    <hr style="border-color:#1427f7;">
-    <h3>Info</h3>
-    <table border="1">
-        <tr style="background-color:#1414f7;">
-    <th>Time to visit</th>
-    <th>cost</th>
-    <th>Tempature</th>
-        </tr>
-        <tr style="background-color:#14aff7;">
-            <td>June to augaust</td>
-            <td>3,000$ per week (average)</td>
-            <td>50F-70F</td>
-        </tr>
-    </table>
-    <hr style="border-color:#1427f7;">
-   <h4 style="font-size:15px;"><b>click  <a href="https://www.travelalaska.com/"><b style="color:blue;">here</b></a> for more info!</b></h4>
+      <body>
+        <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExeDQ1MnU0c3RwMzJxOWh5N3V5bmk2bnp1MWltNmczamlydGI1MXBhNCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/1O1bHxv9ZzuRo4B0cs/giphy.webp">
     </body>
 </html>
