--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
         <title>RRedsAbout</title>
     </head>
       <body>
-        <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExeDQ1MnU0c3RwMzJxOWh5N3V5bmk2bnp1MWltNmczamlydGI1MXBhNCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/1O1bHxv9ZzuRo4B0cs/giphy.webp">
+       <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Background Image</title>
+    <style>
+        body {
+            background-image: url('https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExaHE0cjM3MXo5bW5mcHhnN3Rtb2x2cHpjdXZhNmdjc3Nvdm4wOTVhZSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/yr7n0u3qzO9nG/200.webp');
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+            margin: 0;
+        }
+    </style>
     </body>
 </html>
