--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Background Image</title>
     <style>
         body {
-            background-image: url('https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExaHE0cjM3MXo5bW5mcHhnN3Rtb2x2cHpjdXZhNmdjc3Nvdm4wOTVhZSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/yr7n0u3qzO9nG/200.webp');
+            background-image: url('https://media0.giphy.com/media/TztOD2c0znrtm/giphy.webp?cid=790b7611hns898unm54nf2l37k7hgvwg62u1megays7t80ro&ep=v1_gifs_search&rid=giphy.webp&ct=g');
             background-size: cover;
             background-position: center;
             height: 100vh;
