--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
             background-position: center;
             height: 100vh;
             margin: 0;
+              {
+      margin: 0;
+      padding: 0;
+      background-image: url('https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      font-family: Arial, sans-serif;
+      color: white;
+    }
         }
     </style>
     </body>
