--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background Image</title>
     <style>
-        body {
-            background-image: url('https://media0.giphy.com/media/TztOD2c0znrtm/giphy.webp?cid=790b7611hns898unm54nf2l37k7hgvwg62u1megays7t80ro&ep=v1_gifs_search&rid=giphy.webp&ct=g');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            margin: 0;
-        }
+      body {
+      margin: 0;
+      padding: 0;
+      background-image: url('https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      font-family: Arial, sans-serif;
+      color: white;
+    }
+
     </style>
     </body>
 </html>
