--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Coding Background</title>
+  <title>About REDD</title>
   <style>
     body {
       margin: 0;
@@ -82,11 +82,11 @@
 <body>
   <div class="container">
     <div class="content">
-      <h1>Welcome to Pato's home page </h1>
-      <p>ekkk</p>
-      <p>nothing much yet here.</p>
-      <p>I currently work at LampMC and Cheese!</p>
-      <p>If you need help with something just dm me @patooss.</p>
+      <h1>About goffy Redd </h1>
+      <p>100% not skidded from @patoss.</p>
+      <p>im Red </p>
+      <p>I play Lamp MC</p>
+      <p>my discord is last_red</p>
     </div>
     <div class="boxes">
       <div class="box">
