--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
       font-family: Arial, sans-serif;
       color: white;
     }
-
+  .content {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 40px;
+      border-radius: 10px;
+      max-width: 800px;
+      width: 100%;
+      margin-bottom: 40px;
+    }
     .container {
       min-height: 100vh;
       display: flex;
