--- a/index.html
+++ b/index.html
@@ -13,14 +13,7 @@
       font-family: Arial, sans-serif;
       color: white;
     }
-  .content {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 40px;
-      border-radius: 10px;
-      max-width: 800px;
-      width: 100%;
-      margin-bottom: 40px;
-    }
+
     .container {
       min-height: 100vh;
       display: flex;
@@ -30,7 +23,14 @@
       padding: 20px;
     }
 
-  
+    .content {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 40px;
+      border-radius: 10px;
+      max-width: 800px;
+      width: 100%;
+      margin-bottom: 40px;
+    }
 
     h1 {
       font-size: 48px;
@@ -52,5 +52,8 @@
       <p>I play Lamp MC</p>
       <p>my discord is last_red</p>
     </div>
+  </div>
 </body>
 </html>
+
+
