--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
     <div class="boxes">
       <div class="box">
         <h3>Box 1</h3>
-        <p>pato1.</p>
+        <p>comming  soon?!?!?!?!</p>
       </div>
       <div class="box blue">
         <h3>Box 2</h3>
-        <p>pato2.</p>
+        <p>eh maby click for something cool??</p>
       </div>
       <div class="box red">
         <h3>Box 3</h3>
-        <p>pato3.</p>
+        <p>nvm to lazy</p>
       </div>
     </div>
   </div>
